--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Flake8
-        run: flake8 scales
+        run: |
+          pip3 install flake8
+          flake8 scales
 
       - name: Deploy to server
         uses: appleboy/scp-action@master
