--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "scales/*, setup.*"
+          source: "scales/*, setup.*, scales.wsgi"
           target: "${{ secrets.REMOTE_DIR }}"
